Tests/StellaTests/Resources/printed-code/bad/ERROR_UNEXPECTED_TYPE_FOR_PARAMETER/return_lambda_with_wrong_second_argument.st
language core;

fn main(n : Nat) -> fn(Bool) -> fn(Bool) -> Nat {
    return fn(i : Bool) {
        return fn(j : Nat) {
         return n
     }
    }
}